
Version 102/9:

 * X: Fixed list-box% to handle arbitrarily many list items. (PR 1342)

 * Added pop-down callback initialization argument to popup-menu%, and
   added the 'menu-popdown and 'menu-popdown-none event types to
   control-event%. The callback is invoked with a 'menu-popdown event
   after the callback for a selected item in a popup menu. If the menu
   is dismissed with no item is selected, the callback is incoked with
   a 'menu-popdown-none event.

 * Added `on-demand' to menu-item-container<%> and
   labelled-menu-item<%> for building menu content on demand. The
   `on-demand' method of a menu bar is called when the user clicks on
   the menu bar, before the click is handled by the menu bar. The
   `on-demand' method of a popup menu is called before the menu is
   popped up. The default implementation of `on-demand' in a menu item
   container calls the `on-demand' method of all of its labelled menu
   items (which includes submenus).

 * Windows: fixed `get-font-from-user' when a parent frame is provided.
   (PR 1371)

Version 102/8:

 * Changed pen% width from integer to real number (still between
   0 and 255). Non-integral widths are used for post-script-dc%
   drawing.

Version 102/7:

 * Added `{get,set}-align-top-line' methods to editor-snip%.

 * Added `get-top-line-base' method to text%.

 * Fixed button disabling so that it pops the button back up if the
   user is in the middle of a click (PR 1333). Also fixed event
   dispatching in the case that `on-subwindow-{event,char}' disables
   the target (in which case the event shouldn't be dispatched).

Version 102/6:

 * Fixed pasting and file-loading with objects that use a style other
   than the default one.

Version 102/5:

 [No notable changes]

Version 102/4:

 * Fixed page scrolling in editors, I think. (Rewrote it, actually.)
   Please report any scrolling behavior that doesn't seem right. (PR
   1174 et al.)

 * Fixed copying for editor-snip%s, incorporating and extending